--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,9 @@
 message=Hello from git repository
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/content-database?userSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
