--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+message = Hello from git
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.datasource.url=jdbc:mysql://localhost:3306/content-database?userSSL=false
 spring.datasource.username=root
